<resources>
    <string name="app_name">Meallennium</string>
    <string name="facebook_app_id">812595745803373</string>
    <string name="fb_login_protocol_scheme">fb812595745803373</string>

    <string name="splash_screen_meallenium_name_title">Meallennium</string>

    <string name="home_screen_sign_in_with_facebook_button_text">Sign in with facebook</string>
    <string name="home_screen_sign_in_with_google_button_text">Sign in with Google</string>
    <string name="home_screen_sign_in_with_email_and_password_button_text">Sign in with Email</string>
    <string name="home_screen_dont_have_account_frame_sign_up_text_1">don\'t have an account?</string>
    <string name="home_screen_dont_have_account_frame_sign_up_text_2">\ \ Sign up</string>

    <string name="sign_up_screen_name_edit_text_hint">Name</string>
    <string name="sign_up_screen_email_edit_text_hint">Email</string>
    <string name="sign_up_screen_password_edit_text_hint">Password</string>
    <string name="sign_up_screen_confirm_password_edit_text_hint">Confirm Password</string>
    <string name="sign_up_screen_sign_up_button_text">Sign Up</string>
    <string name="sign_up_screen_back_button_text">Back</string>

    <string name="sign_in_screen_email_edit_text_hint">Email</string>
    <string name="sign_in_screen_password_edit_text_hint">Password</string>
    <string name="sign_in_screen_sign_up_button_text">Sign In</string>
    <string name="sign_in_screen_back_button_text">Back</string>

    <string name="alert_user_authentication_failed_title">Authentication Failed</string>
    <string name="alert_sign_out_title">Sign Out</string>
    <string name="alert_sign_out_message">Are you sure you want to sign out?</string>
    <string name="alert_user_authentication_canceled_title">Authentication Canceled</string>
    <string name="alert_user_authentication_canceled_message">The authentication was canceled</string>
    <string name="alert_field_validation_error_title">Validation Error</string>
    <string name="alert_field_validation_error_message">Your password was not confirmed properly</string>
    <string name="alert_yes_button_text">Yes</string>
    <string name="alert_no_button_text">No</string>
    <string name="alert_ok_button_text">OK</string>

    <string name="post_list_screen_sign_out_button_text">Sign Out</string>
    <string name="post_list_screen_top_action_bar_center_text">Share Your Experience</string>

    <string name="navigation_drawer_menu_home_option_text">Home</string>
    <string name="navigation_drawer_menu_my_posts_option_text">My Posts</string>
    <string name="navigation_drawer_menu_settings_option_text">Settings</string>
    <string name="navigation_drawer_menu_sign_out_option_text">Sign Out</string>
    <string name="navigation_drawer_menu_share_post_option_text">Share Post…</string>
    <string name="navigation_drawer_menu_actions_group_text">Actions</string>
    <string name="navigation_drawer_menu_about_option_text">About</string>

    <string name="about_screen_description_text">Meallennium allows customers, restaurants and bakeries\nto share new menus and experiences\n\n\n\n\nContact us in\n<b>www.meallennium.com/contact</b>\nfor further questions</string>
    <string name="about_screen_version_title_text">Version:</string>
    <string name="about_screen_top_action_bar_center_text">About Meallennium</string>

</resources>
