<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".ui.fragments.SignInFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp">

        <com.benohayon.meallennium.ui.custom_views.AppTitleView
            android:id="@+id/signInScreenMeallenniumLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="45dp" />

        <EditText
            android:id="@+id/signInScreenEmailEditText"
            style="@style/editTextStyle"
            android:layout_width="@dimen/sign_in_button_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_below="@+id/signInScreenMeallenniumLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:background="@color/white"
            android:hint="@string/sign_in_screen_email_edit_text_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/button_text_size" />

        <EditText
            android:id="@+id/signInScreenPasswordEditText"
            style="@style/editTextStyle"
            android:layout_width="@dimen/sign_in_button_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_below="@+id/signInScreenEmailEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@color/white"
            android:hint="@string/sign_in_screen_password_edit_text_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/button_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <com.benohayon.meallennium.ui.custom_views.stylable.StylableTextView
                android:id="@+id/signInScreenBackButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="@drawable/styled_button_background"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/sign_in_screen_back_button_text"
                android:textSize="@dimen/button_text_size" />

            <com.benohayon.meallennium.ui.custom_views.stylable.StylableTextView
                android:id="@+id/signInScreenSignInButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/styled_button_background"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/sign_in_screen_sign_up_button_text"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/signInScreenProgressBar"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>